
=== Bugfixes
* Raise a nice error when encountering step definition without block (#95 Aslak Hellesøy)
* Features written using Ruby where breaking due to missing a line number (#91 Joseph Wilk)
* Directly creating a Table meant the scenario table header was never set which was causing a formatter error (#91 Joseph Wilk)

=== Removed features
* Step definition without a block being treated as pending (#64 Joseph Wilk)
* The --line option has been removed. Use the new file.feature:line format instead.

== 0.1.9

With this release Cucumber supports 19 (!) natural languages:

* Arabic
* Chinese Simplified
* Danish
* Dutch
* Estonian
* French
* German
* Italian
* Japanese
* Malay
* Norwegian
* Polish
* Portuguese
* Romanian
* Russian
* Spanish
* Swedish
* Texan
* Welsh

Thanks a lot to everyone who has contributed translations. If you don't see your language here, please
add it: http://github.com/aslakhellesoy/cucumber/wikis/spoken-languages

Main functional changes in this release is "Autotest":http://github.com/aslakhellesoy/cucumber/wikis/autotest-integration
support and how multiline strings work in feature files:

  # In your .feature file
  Then I should see
    """
    A string
      that "indents"
    and spans
    several lines
  
    """

  # In your steps.rb file
  Then 'I should see' do |text|
    text.should == "A string\n  that \"indents\"\nand spans\nseveral lines\n"
  end

The triple quotes are used to define the start and end of a string, and it also defines what gets stripped away
in the inside string. If the triple quotes are indented 4 spaces, then the text within will have the 4 first
spaces removed too.

=== New features
* Added --[no-]color option to force color on or off (Peter Jaros)
* Step definition without a block will be treated as pending (#64 Joseph Wilk)
* Added support for Welsh (improvements welcome) (Joseph Wilk)
* Added --quiet option to hide all development aid output when using Pretty formatter (#69 Joseph Wilk)