@@ -1,3 +1,4 @@
+$KCODE='u'
 require 'spec'
 $:.unshift(File.dirname(__FILE__) + '/../../lib')
 require 'calculator'
