@@ -1,6 +1,7 @@
 $:.unshift(File.dirname(__FILE__)) unless
   $:.include?(File.dirname(__FILE__)) || $:.include?(File.expand_path(File.dirname(__FILE__)))
 
+require 'jcode'
 require 'cucumber/platform'
 require 'rubygems'
 require 'treetop/runtime'
