@@ -2,6 +2,7 @@ require 'rubygems'
 gem 'rspec'
 require 'spec'
 
+$KCODE='u'
 $:.unshift(File.dirname(__FILE__) + '/../lib')
 require 'cucumber'
 require 'cucumber/treetop_parser/feature_en'
